Squashed commit of the following from workspaces:
commit beb9b6a3ee386d5ae85c8f3658030728c68277a9
Author: parmpreet001 <parmpreet1337@gmail.com>
Date:   Thu Aug 10 20:54:25 2023 -0700

    Fix visual issues

    - Hovering over a workspace card no longer changes its color
    - Can no longer mark a card for deletion when not in deletion mode

commit 54c98eb89f5994c8536b1aabdb51eed2638b4afa
Author: parmpreet001 <parmpreet1337@gmail.com>
Date:   Thu Aug 10 20:49:02 2023 -0700

    Implement workspace deletion

commit 586373ae46b9ea2042c15553dd25b8f231234b3b
Author: parmpreet001 <parmpreet1337@gmail.com>
Date:   Thu Aug 10 16:39:07 2023 -0700

    Cleanup Workspace.js

commit a7ac5cf94531220be5e69600fbea9abc7b9503fd
Author: parmpreet001 <parmpreet1337@gmail.com>
Date:   Thu Aug 10 16:06:44 2023 -0700

    Update Workspace.js

    - Can now mark workspaces for deletion
    - Rewrote WorkspaceCard() to use function for class name instead of ternary operation

commit 992e8a0b917a39fb03ce0f62fc5769e738ee0680
Author: parmpreet001 <parmpreet1337@gmail.com>
Date:   Thu Aug 10 16:06:04 2023 -0700

    Break Workspace.scss into smaller components

commit df6f451dd865034cfbae7c8331df699f4c6ffe37
Author: parmpreet001 <parmpreet1337@gmail.com>
Date:   Wed Aug 9 22:36:17 2023 -0700

    Implement Add Workspace button

commit df3da2e7806c536bb659f9c7c3142394a1bd1270
Author: parmpreet001 <parmpreet1337@gmail.com>
Date:   Wed Aug 9 21:27:38 2023 -0700

    Move workspace add button to left of name input

commit 808e79b6697354442bc9c3517f26b292d2d8a2c5
Author: parmpreet001 <parmpreet1337@gmail.com>
Date:   Wed Aug 9 21:21:30 2023 -0700

    Add button to confirm adding new workspace

commit e18c555449d2a43a72976968377c4cbd0af0e2bd
Author: parmpreet001 <parmpreet1337@gmail.com>
Date:   Wed Aug 9 20:36:41 2023 -0700

    Made new workspace name input responsive

commit 8feace49550672c7af44ab3017128ff764e50d4c
Author: parmpreet001 <parmpreet1337@gmail.com>
Date:   Wed Aug 9 18:51:55 2023
